# Vroom--old-

./: README.md
MD-Demo/: shared-scripts.sh
MD-Demo/Android/: setup.sh
MD-Demo/Console/: CMakeLists.txt  setup.sh
MD-Demo/OldSourceButMaybeUseful/application/: application.cpp  application.hpp
MD-Demo/OldSourceButMaybeUseful/application/opengl/: opengl-application.hpp  opengl-mesh.hpp  opengl-pipeline.cpp  opengl-pipeline.hpp
MD-Demo/Windows/: CMakeLists.txt  CMakeSettings.json  setup.ps1
MD-Demo/iOS/: setup.sh
MD-Demo/macOS/: ._Triangle.xcodeproj
MD-Demo/main/assets/shaders/opengl/: default.frag
MD-Demo/main/src/assets/: assets.cpp  assets.hpp
MD-Demo/main/src/assets/mesh/: mesh.hpp
MD-Demo/main/src/core/: sdl-wrapper.cpp  vertex.hpp
MD-Demo/main/src/debug/: print.hpp
MD-Demo/main/src/engine/: engine.cpp
MD-Demo/main/src/engine/application/: application.cpp  application.hpp
Triangle/: ._iOS  ._macOS
Triangle/Console/: cmake-post-build.sh
Triangle/Emscripten/: setup.sh  template.html
Triangle/Windows/: CMakeLists.txt
Triangle/iOS/: ._LaunchScreen.storyboard  project.yml
Triangle/main/assets/shaders/opengl/: default.frag  default.vert
Triangle/main/src/: main.cpp
Triangle/main/src/application/opengl/: opengl-asset-manager.cpp  opengl-mesh.cpp  opengl-renderer.cpp  opengl-texture.cpp
Triangle/main/src/core/: asset-inventory.cpp  asset-inventory.hpp  asset-manager.hpp  assets.cpp  assets.hpp  bitmap.hpp  engine.cpp  engine.hpp  graphics-wrapper.hpp  log.cpp  log.hpp  mesh.cpp  mesh.hpp  platform.cpp  platform.hpp  renderer.cpp  renderer.hpp  static-mesh-instance.cpp  static-mesh-instance.hpp
Triangle/main/src/scene/: scene-main.cpp  scene-main.hpp  scene.hpp
VroomSDF/Android/: ._local.properties  build.gradle  settings.gradle
VroomSDF/Console/: build.sh
VroomSDF/Emscripten/: CMakeLists.txt  build.sh  cmake-post-build.sh
VroomSDF/OldSourceButMaybeUseful/application/opengl/: opengl-application.cpp  opengl-asset-manager.hpp  opengl-renderer.hpp  opengl-texture.hpp
VroomSDF/Windows/: CMakeLists.txt  cmake-post-build.ps1
VroomSDF/iOS/: ._Triangle.xcodeproj
VroomSDF/macOS/: Source  project.yml  setup.sh
VroomSDF/main/assets/shaders/opengl/: default.frag  default.vert
VroomSDF/main/src/: main.cpp
VroomSDF/main/src/assets/: assets.cpp
VroomSDF/main/src/assets/mesh/: mesh.cpp
VroomSDF/main/src/core/: perspective-camera.cpp  perspective-camera.hpp  sdl-wrapper.hpp  vertex.cpp
VroomSDF/main/src/debug/: print.cpp
VroomSDF/main/src/engine/: engine.hpp
(+12 files in other folders)
